# cnpj-sqlite

./: .env-template  .gitignore  README.md  dados_cnpj_baixa.py  dados_cnpj_cnae_secundaria.py  dados_cnpj_extrair.py  dados_cnpj_lista_url.py  dados_cnpj_para_mongodb.py  dados_cnpj_para_sqlite.py  dados_cnpj_para_sqlite_importante.py  dados_cnpj_para_sqlite_lite.py  data_to_sqlite.py  download_data.sh  pyproject.toml  requirements.txt  sqlite_to_json.sql
exemplos/: sql_consulta_dados_empresa.sql  sql_consulta_dados_empresas_socios_por_natureza.sql  sql_consulta_empresa_municipio_cep.sql  sql_consulta_empresas_socio.sql  sql_consulta_exportavel.sql  sql_consulta_socios_de empresa..sql  sql_cria_tabela_cnae_secundaria_dividida.sql  sql_cria_tabela_porte_situacao.sql
old/: README.txt  dados_cnpj_cnae_secundaria.py  dados_cnpj_lista_url.py
