[tool.poetry]
name = "cnpj-sqlite"
version = "0.2"
description = ""
authors = ["Jean Landim <jewanbb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
loguru = "^0.5.3"
dask = "^2021.11.2"
SQLAlchemy = "^1.4.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
